# hacktropica

./: .dockerignore  .gitignore  Dockerfile  README.md  api_docs.md  docker-compose.yml  docker-entrypoint.sh  gitstatus.txt  pyproject.toml  requirements.txt
agent/: __init__.py  __main__.py  _llm_call.py  cli.py  config.py  graph.py  state.py
agent/nodes/: __init__.py  _llm_call.py  _mcq.py  _search.py  _tree.py  bridge.py  curator.py  evaluator.py  lesson_generator.py  merge.py  next_node.py  orchestrator.py  quiz.py  root.py  router.py  tutor.py
api/: config.py  main.py  redis.py  topic_validation.py
api/database/: core.py  model.py  models.py
api/engine/: auth_utils.py  runner.py  websocket.py  worker.py
api/middleware/: error_handler.py  rate_limiter.py
api/routers/: auth.py  learning.py  search.py
api/routers/learning/: __init__.py  evaluation.py  graph_nodes.py  journey.py  lessons.py  progress.py  sessions.py  websocket_route.py
api/schemas/: __init__.py  auth.py  learning.py  responses.py
api/services/: __init__.py  concurrency.py  evaluation_service.py  graph_helpers.py  graph_mutation_service.py  journey_service.py  lesson_service.py  recommendation.py  session_service.py  user_service.py
mobile/: DESIGN.md  README.md  pubspec.yaml
mobile/lib/: main.dart
mobile/lib/config/: router.dart  (+2 more)
mobile/test/: widget_test.dart
mobile/web/: index.html  manifest.json
ui/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
ui/src/: App.tsx  index.css
(+51 files in other folders)
